# ClaudeProxyServer

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  how_to_connect.md  nginx.conf  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_drop_auth_type.py
mock_anthropic/: main.py
scripts/: test_e2e.sh  test_routing.sh  verify_tokens.sh
src/api/: app.py  dependencies.py  lifespan.py
src/api/middleware/: request_id.py  timing.py
src/api/routers/: auth.py  health.py  proxy.py  ui.py
src/application/dto/: account_dto.py  stats_dto.py  user_dto.py
src/application/routing/: least_connections.py  strategy.py
src/application/services/: account_service.py  probe_service.py  proxy_service.py  stats_service.py  user_service.py
src/core/: config.py  database.py  logger.py  security.py
src/domain/: exceptions.py
src/domain/interfaces/: account_repository.py  account_state_manager.py  (+2 more)
src/infrastructure/: metrics.py
templates/: base.html  login.html
templates/admin/: accounts.html  dashboard.html  users.html
templates/user/: usage.html
tests/: conftest.py
tests/e2e/: test_full_proxy_flow.py
tests/integration/: test_auth_endpoints.py  test_proxy_endpoint.py
tests/unit/: test_account_service.py  test_account_state_manager.py  test_client_pool.py  test_domain_exceptions.py  test_dtos.py  test_extract_sse.py  test_routing_strategy.py  test_security.py  test_security_full.py  test_stats_service.py  test_user_service.py
(+14 files in other folders)
